--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "jsdoc": "^3.5.5",
     "rollup": "^0.57.0",
     "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-sass": "^0.6.0",
     "rollup-plugin-uglify": "^3.0.0"
   }
 }
