--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
-    "doc": "jsdoc src -r -c ./jsdoc.json"
+    "watch": "rollup -c --watch",
+    "doc": "jsdoc -c ./jsdoc.json"
   },
   "repository": {
     "type": "git",
@@ -31,10 +32,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "foodoc": "0.0.8",
     "jsdoc": "^3.5.5",
     "rollup": "^0.57.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-sass": "^0.6.0",
     "rollup-plugin-uglify": "^3.0.0"
-  }
+  },
+  "dependencies": {}
 }
